[package]
name = "nextcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = [] }
tokio = { version = "1", features = ["full"] }
quick-xml = { version = "0.31.0", features = ["async-tokio"] }
url = "2.5.0"
